--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/drae7299/Team_Profile_Gen-#readme",
   "dependencies": {
     "inquirer": "^8.0.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "start": "^5.1.0"
   }
 }
