adjusted test files to get 14 out of 17 to pass, can not figure out the other 3

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "inquirer": "^8.0.0",
     "jest": "^26.6.3",
-    "start": "^5.1.0"
+    "run": "^1.4.0",
+    "start": "^5.1.0",
+    "test": "^0.6.0"
   }
 }
